2.3/2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-service
spec:
  type: NodePort
  selector:
    app: nginx-https
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
